added comments to class Scene3D_SUNRGBD(Scene3D) and functions used to clarify camera transformation

--- a/inspect_vis_gt.ipynb
+++ b/inspect_vis_gt.ipynb
@@ -2,20 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:90% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "---yaw in degrees: -0.32049454313246817\n",
+      "[[ 0.9999  0.      0.0119]\n",
+      " [ 0.      1.      0.    ]\n",
+      " [-0.0119  0.      0.9999]]\n",
       "[draw_projected_bdb3d] Returned.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4bf0921b1a1d492e975dbffefdc17104",
+       "model_id": "01c3a259088d477aab120e92f1755edd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -30,11 +46,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[draw_projected_layoutbdb3d] Returned.\n"
+      "[draw_projected_layoutbdb3d] Returned.\n",
+      "[[ 0.9902  0.1396  0.0056]\n",
+      " [-0.1396  0.987   0.0794]\n",
+      " [ 0.0056 -0.0794  0.9968]]\n"
      ]
     }
    ],
    "source": [
+    "%reload_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:90% !important; }</style>\"))\n",
+    "\n",
     "import os, sys\n",
     "from utils.sunrgbd_config import SUNRGBD_CONFIG\n",
     "from configs.data_config import NYU40CLASSES\n",
@@ -49,15 +74,17 @@
     "from libs.tools import camera_cls_reg_sunrgbd, layout_size_avg_residual, ori_cls_reg, obj_size_avg_residual, bin_cls_reg, list_of_dict_to_dict_of_list\n",
     "import json\n",
     "\n",
+    "from utils.utils_rui import *\n",
+    "\n",
     "sunrgbd_config = SUNRGBD_CONFIG()\n",
-    "sequence = readsunrgbdframe(sunrgbd_config, image_id=2)\n",
+    "image_id = 3\n",
+    "sequence = readsunrgbdframe(sunrgbd_config, image_id=image_id) # utils.sunrgbd_utils -> class SUNRGBDData()\n",
+    "scene = Scene3D_SUNRGBD(sequence) # utils.vis_tools_sunrgbd -> class Scene3D_SUNRGBD(Scene3D)\n",
     "\n",
-    "\n",
-    "scene = Scene3D_SUNRGBD(sequence)\n",
     "# scene.draw_image()\n",
     "# scene.draw_cls()\n",
     "# scene.draw_inst()\n",
-    "im = scene.draw_projected_bdb3d(return_plt=True)\n",
+    "im, color_list = scene.draw_projected_bdb3d(return_plt=True)\n",
     "\n",
     "%matplotlib widget\n",
     "\n",
@@ -72,57 +99,39 @@
     "# scene.draw3D()\n",
     "\n",
     "# display(fig)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print(sequence.R_ex)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## what happens in 'class Scene3D_SUNRGBD(Scene3D)'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style>.container { width:90% !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%reload_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "from IPython.core.display import display, HTML\n",
-    "display(HTML(\"<style>.container { width:90% !important; }</style>\"))\n",
-    "\n",
-    "from utils.sunrgbd_config import SUNRGBD_CONFIG\n",
-    "sunrgbd_config = SUNRGBD_CONFIG()\n",
-    "\n",
-    "import pickle\n",
-    "with open(sunrgbd_config.obj_avg_size_file, 'rb') as f:\n",
-    "    obj_avg_size = pickle.load(f, encoding='latin1')\n",
-    "\n",
-    "\n",
-    "from utils.sunrgbd_utils import readsunrgbdframe, process_sunrgbd_frame\n",
-    "\n",
-    "data_frame = readsunrgbdframe(sunrgbd_config, image_id=2)\n",
-    "scene = Scene3D_SUNRGBD(data_frame)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.8746  0.4838  0.0304]\n",
+      " [-0.4838  0.8673  0.1174]\n",
+      " [ 0.0304 -0.1174  0.9926]]\n",
+      "[[ 0.9994  0.     -0.0348]\n",
+      " [ 0.      1.      0.    ]\n",
+      " [ 0.0348  0.      0.9994]]\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d208e284e8764c8a8e7a0eb5aeabe3db",
+       "model_id": "871d17556599406c97d2ee8d41d5bc20",
        "version_major": 2,
        "version_minor": 0
       },
@@ -135,44 +144,392 @@
     }
    ],
    "source": [
-    "data_frame._manhattan_layout\n",
-    "def vis_cube_plt(Xs, ax, color='r'):\n",
-    "    index1 = [0, 1, 2, 3, 0, 4, 5, 6, 7, 4]\n",
-    "    index2 = [[1, 5], [2, 6], [3, 7]]\n",
-    "    ax.scatter3D(Xs[:, 0], Xs[:, 1], Xs[:, 2])\n",
-    "    ax.plot3D(Xs[index1, 0], Xs[index1, 1], Xs[index1, 2], color=color)\n",
-    "    for index in index2:\n",
-    "        ax.plot3D(Xs[index, 0], Xs[index, 1], Xs[index, 2], color=color)\n",
-    "    \n",
-    "# https://stackoverflow.com/questions/11140163/plotting-a-3d-cube-a-sphere-and-a-vector-in-matplotlib\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from itertools import product, combinations\n",
+    "np.set_printoptions(precision=4)\n",
+    "np.set_printoptions(suppress=True)\n",
     "\n",
+    "from utils.sunrgbd_utils import get_NYU37_class_id, cvt2nyu37class_map, process_layout, get_world_R, transform_to_world,\\\n",
+    "    cvt_R_ex_to_cam_R, check_bdb2d, process_bdb3d, process_bdb2d, get_inst_map, normalize_point, get_campact_layout\n",
+    "\n",
+    "cam_R = cvt_R_ex_to_cam_R(sequence.R_ex) # transform objects from world system to camera system\n",
+    "# define a world system\n",
+    "world_R = get_world_R(cam_R) # almost identity matrix\n",
+    "print(cam_R)\n",
+    "print(world_R)\n",
+    "\n",
+    "layout, layout_t = process_layout(sequence.manhattan_layout) # sequence.manhattan_layout: 8-point bbox; transform sunrgbd layout to toward-up-right form.\n",
+    "centroid = layout['centroid']\n",
+    "vectors = np.diag(layout['coeffs']).dot(layout['basis'])\n",
+    "\n",
+    "bdb3ds_ws = process_bdb3d(sequence.bdb3d) # sequence.bdb3d: an array of length: num of objects\n",
+    "\n",
+    "# key: transform everything to world system\n",
+    "layout, __bdb3d, __cam_R = transform_to_world(layout, bdb3ds_ws, cam_R, world_R)\n",
     "\n",
     "fig = plt.figure()\n",
     "ax = fig.gca(projection='3d')\n",
     "ax.set_aspect(\"auto\")\n",
+    "vis_axis(ax)\n",
+    "\n",
+    "# bdb3d_layout_not_processed = get_corners_of_bb3d_no_index(layout['basis'], layout['coeffs'], layout['centroid'])\n",
+    "bdb3d_layout_not_processed = layout_t\n",
+    "vis_cube_plt(bdb3d_layout_not_processed, ax, 'b')\n",
+    "\n",
+    "# comparing against: processed inside the function\n",
+    "bdb3d_layout = get_corners_of_bb3d_no_index(scene.layout['basis'], scene.layout['coeffs'], scene.layout['centroid'])\n",
+    "vis_cube_plt(bdb3d_layout, ax, 'r')\n",
+    "\n",
+    "ax.view_init(elev=-66, azim=92)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.4837, -1.3289, -1.6843],\n",
+       "       [ 2.649 ,  3.3146, -1.6843],\n",
+       "       [-1.174 ,  5.0973, -1.6843],\n",
+       "       [-3.3393,  0.4538, -1.6843],\n",
+       "       [ 0.4837, -1.3289,  4.    ],\n",
+       "       [ 2.649 ,  3.3146,  4.    ],\n",
+       "       [-1.174 ,  5.0973,  4.    ],\n",
+       "       [-3.3393,  0.4538,  4.    ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sequence.manhattan_layout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.8752,  0.4794,  0.0649],\n",
+       "       [-0.4838,  0.8673,  0.1174],\n",
+       "       [ 0.    , -0.1342,  0.991 ]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "__cam_R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'coeffs': array([0.8753, 0.4823, 1.0979]),\n",
+       "  'basis': array([[-0.6221,  0.    ,  0.7829],\n",
+       "         [ 0.    ,  1.    ,  0.    ],\n",
+       "         [-0.7829, -0.    , -0.6221]]),\n",
+       "  'centroid': array([ 2.5768, -0.7177,  0.3023]),\n",
+       "  'class_id': 4},\n",
+       " {'coeffs': array([0.8753, 0.4823, 1.0979]),\n",
+       "  'basis': array([[-0.6178,  0.    ,  0.7863],\n",
+       "         [ 0.    ,  1.    ,  0.    ],\n",
+       "         [-0.7863,  0.    , -0.6178]]),\n",
+       "  'centroid': array([ 2.5784, -0.7177,  0.2881]),\n",
+       "  'class_id': 4})"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bdb3ds_ws[0], __bdb3d[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 0.934 ,  0.3541,  0.0482],\n",
+       "        [-0.3541,  0.8988,  0.2585],\n",
+       "        [ 0.0482, -0.2585,  0.9648]]),\n",
+       " array([[ 0.9987,  0.    , -0.0515],\n",
+       "        [ 0.    ,  1.    ,  0.    ],\n",
+       "        [ 0.0515,  0.    ,  0.9987]]))"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cam_R, world_R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.2711,  4.    , -0.62  ],\n",
+       "       [ 0.3442,  4.    ,  4.071 ],\n",
+       "       [ 5.2405,  4.    ,  2.3851],\n",
+       "       [ 3.6253,  4.    , -2.3059],\n",
+       "       [-1.2711, -1.2711, -0.62  ],\n",
+       "       [ 0.3442, -1.2711,  4.071 ],\n",
+       "       [ 5.2405, -1.2711,  2.3851],\n",
+       "       [ 3.6253, -1.2711, -2.3059]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bdb3d_layout_not_processed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.2764,  4.    , -0.6089],\n",
+       "       [ 0.3796,  4.    ,  4.0679],\n",
+       "       [ 5.2611,  4.    ,  2.3394],\n",
+       "       [ 3.605 ,  4.    , -2.3374],\n",
+       "       [-1.2764, -1.2711, -0.6089],\n",
+       "       [ 0.3796, -1.2711,  4.0679],\n",
+       "       [ 5.2611, -1.2711,  2.3394],\n",
+       "       [ 3.605 , -1.2711, -2.3374]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bdb3d_layout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.926   0.      0.3775]\n",
+      " [ 0.      1.      0.    ]\n",
+      " [-0.3775  0.      0.926 ]] [[ 0.9205  0.      0.3907]\n",
+      " [ 0.      1.      0.    ]\n",
+      " [-0.3907  0.      0.9205]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(scene.layout['basis'], layout['basis'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.2679 2.6875 1.7295] [2.2679 2.6875 1.7295]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(scene.layout['coeffs'], layout['coeffs'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.4495  1.3125 -0.1969] [ 1.4522  1.3125 -0.1761]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(scene.layout['centroid'], layout['centroid'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# vis from 'scene'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a271399a2e7249dcb4c69d4347c8d196",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4, 0.3686274509803922, 0.9137254901960784]\n",
+      "[0.23529411764705882, 0.7647058823529411, 0.6627450980392157]\n",
+      "[0.7294117647058823, 0.7450980392156863, 0.47843137254901963]\n",
+      "[0.611764705882353, 0.03529411764705882, 0.396078431372549]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fig = plt.figure()\n",
+    "ax = fig.gca(projection='3d')\n",
+    "ax.set_aspect(\"auto\")\n",
+    "vis_axis(ax)\n",
     "\n",
     "# vis_cube_plt(data_frame.manhattan_layout, ax)\n",
     "bdb3d_layout = get_corners_of_bb3d_no_index(scene.layout['basis'], scene.layout['coeffs'], scene.layout['centroid'])\n",
-    "vis_cube_plt(bdb3d_layout, ax, 'k')\n",
+    "vis_cube_plt(bdb3d_layout, ax, 'r')\n",
+    "ax.view_init(elev=-66, azim=92)\n",
     "\n",
     "from utils.sunrgbd_utils import proj_from_point_to_2d\n",
-    "for bdb3d in scene.bdb3d:\n",
-    "    bdb3d_corners = get_corners_of_bb3d_no_index(bdb3d['basis'], bdb3d['coeffs'], bdb3d['centroid'])\n",
+    "\n",
+    "for bdb3d, color in zip(scene.bdb3d, color_list):\n",
+    "    bdb3d_corners = get_corners_of_bb3d_no_index(bdb3d['basis'], bdb3d['coeffs'], bdb3d['centroid']) # bbox y axis is absolute upright\n",
+    "    vis_cube_plt(bdb3d_corners, ax, color=color)\n",
+    "    \n",
+    "for bdb3d, color in zip(bdb3ds_ws, color_list):\n",
+    "    bdb3d_corners = get_corners_of_bb3d_no_index(bdb3d['basis'], bdb3d['coeffs'], bdb3d['centroid']) # bbox y axis is absolute upright\n",
     "    vis_cube_plt(bdb3d_corners, ax)\n",
     "\n",
-    "# draw cube\n",
-    "# for s, e in combinations(data_frame._manhattan_layout, 2):\n",
-    "#     ax.plot3D(*zip(s, e), color=\"b\")\n",
-    "\n",
-    "# plt.show()\n",
     "fig.canvas.toolbar_visible = True\n",
     "\n",
     "# display(fig)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 0.7829, -0.6221,  0.    ],\n",
+       "       [ 0.6221,  0.7829,  0.    ],\n",
+       "       [ 0.    ,  0.    ,  1.    ]]), array([[0.8753, 1.0979, 0.4823]]), array([[ 0.3023,  2.5768, -0.7177]]), array(['bed'], dtype='<U3'), array(['SUNRGBD/kv2/kinect2data/000015_2014-05-26_14-37-33_260595134347_rgbf000020-resize'],\n",
+       "      dtype='<U81'), array([[-0.6221, -0.7829,  0.    ]]), array([[1]], dtype=uint8))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sequence.bdb3d[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'coeffs': array([0.8753, 0.4823, 1.0979]),\n",
+       "  'basis': array([[-0.6221,  0.    ,  0.7829],\n",
+       "         [ 0.    ,  1.    ,  0.    ],\n",
+       "         [-0.7829, -0.    , -0.6221]]),\n",
+       "  'centroid': array([ 2.5768, -0.7177,  0.3023]),\n",
+       "  'class_id': 4},\n",
+       " {'coeffs': array([0.3175, 0.3554, 0.2273]),\n",
+       "  'basis': array([[-0.6317,  0.    ,  0.7752],\n",
+       "         [ 0.    ,  1.    ,  0.    ],\n",
+       "         [-0.7752, -0.    , -0.6317]]),\n",
+       "  'centroid': array([ 4.0484, -0.8309, -0.1426]),\n",
+       "  'class_id': 32},\n",
+       " {'coeffs': array([0.2995, 0.3256, 0.2808]),\n",
+       "  'basis': array([[-0.534 ,  0.    ,  0.8455],\n",
+       "         [ 0.    ,  1.    ,  0.    ],\n",
+       "         [-0.8455, -0.    , -0.534 ]]),\n",
+       "  'centroid': array([ 2.4155, -0.8744,  1.8649]),\n",
+       "  'class_id': 32},\n",
+       " {'coeffs': array([0.193 , 0.3727, 0.193 ]),\n",
+       "  'basis': array([[-0.6832,  0.    ,  0.7303],\n",
+       "         [ 0.    ,  1.    ,  0.    ],\n",
+       "         [-0.7303, -0.    , -0.6832]]),\n",
+       "  'centroid': array([ 4.    , -0.0955, -0.0955]),\n",
+       "  'class_id': 35}]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bdb3ds_ws"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
