finished cam transformation

--- a/inspect_vis_gt.ipynb
+++ b/inspect_vis_gt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,17 +21,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---yaw in degrees: -0.32049454313246817\n",
-      "[[ 0.9999  0.      0.0119]\n",
-      " [ 0.      1.      0.    ]\n",
-      " [-0.0119  0.      0.9999]]\n",
+      "[[ 0.99992967  0.          0.01185941]\n",
+      " [ 0.          1.          0.        ]\n",
+      " [-0.01185941  0.          0.99992967]]\n",
+      "(530, 730, 3)\n",
       "[draw_projected_bdb3d] Returned.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01c3a259088d477aab120e92f1755edd",
+       "model_id": "583d180c63dc4a90b2002f944610f5e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -47,9 +47,9 @@
      "output_type": "stream",
      "text": [
       "[draw_projected_layoutbdb3d] Returned.\n",
-      "[[ 0.9902  0.1396  0.0056]\n",
-      " [-0.1396  0.987   0.0794]\n",
-      " [ 0.0056 -0.0794  0.9968]]\n"
+      "[[ 0.990197  0.139566  0.005576]\n",
+      " [-0.139566  0.987025  0.079386]\n",
+      " [ 0.005576 -0.079386  0.996828]]\n"
      ]
     }
    ],
@@ -102,6 +102,28 @@
     "plt.show()\n",
     "\n",
     "print(sequence.R_ex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[529.5,   0. , 365. ],\n",
+       "       [  0. , 529.5, 265. ],\n",
+       "       [  0. ,   0. ,   1. ]])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scene.cam_K"
    ]
   },
   {
