first version of utils_OR/batch_process_OR.py

--- a/vis_OR_gt.ipynb
+++ b/vis_OR_gt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4660b0f0964e4612bcb26df8ea889338",
+       "model_id": "765fb90981ca4cd2a44d0a83de36d159",
        "version_major": 2,
        "version_minor": 0
       },
@@ -68,6 +68,8 @@
     "\n",
     "scene_name = 'scene0001_01'\n",
     "# scene_name = 'scene0002_00'\n",
+    "# scene_name = 'scene0105_02'\n",
+    "\n",
     "frame_idx = 4\n",
     "\n",
     "rendering_path = '/newfoundland2/ruizhu/siggraphasia20dataset/code/Routine/DatasetCreation/main_xml'\n",
@@ -92,13 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 710,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf6b86a20a694ccd9a6251de8f5f236c",
+       "model_id": "c0fc8dbcdb5142d78a264b97ad5360dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +114,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86759facf7264b38873dcac40bddeb88",
+       "model_id": "20afa57978c549c1a8acfb73e7b27be8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,7 +128,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d4001a200d34d48bc8d499483d446f4",
+       "model_id": "699a07c25b0c4b59822c278ed7bcfb5f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8b5bb1680aeb4f529f18053d5f249cfb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -139,7 +155,10 @@
     }
    ],
    "source": [
-    "from utils_OR.utils_OR_mesh import *\n",
+    "from utils.utils_rui import vis_cube_plt, vis_axis\n",
+    "from utils_OR.utils_OR_mesh import minimum_bounding_rectangle, mesh_to_contour\n",
+    "\n",
+    "\n",
     "mesh = load_OR_mesh(layout_obj_file)\n",
     "# mesh = mesh.dump()[0]\n",
     "mesh = remove_top_down_faces(mesh)\n",
@@ -147,7 +166,6 @@
     "e = mesh.edges\n",
     "\n",
     "%matplotlib widget\n",
-    "from utils.utils_rui import vis_axis\n",
     "fig = plt.figure()\n",
     "ax = fig.gca(projection='3d')\n",
     "ax.set_proj_type('ortho')\n",
@@ -167,10 +185,9 @@
     "    ax.plot(v_pair[0], v_pair[1])\n",
     "\n",
     "# finding minimum 2d cuboid from contour\n",
-    "from utils_OR.utils_OR_mesh import minimum_bounding_rectangle, mesh_to_contour\n",
     "layout_hull_2d = minimum_bounding_rectangle(v_2d)\n",
     "hull_pair_idxes = [[0, 1], [1, 2], [2, 3], [3, 0]]\n",
-    "hull_v_pairs = [([layout_hull[idx[0]][0], layout_hull[idx[1]][0]], [layout_hull[idx[0]][1], layout_hull[idx[1]][1]]) for idx in hull_pair_idxes]\n",
+    "hull_v_pairs = [([layout_hull_2d[idx[0]][0], layout_hull_2d[idx[1]][0]], [layout_hull_2d[idx[0]][1], layout_hull_2d[idx[1]][1]]) for idx in hull_pair_idxes]\n",
     "for v_pair in hull_v_pairs:\n",
     "    ax.plot(v_pair[0], v_pair[1], 'b--')\n",
     "plt.grid()\n",
@@ -189,31 +206,10 @@
     "\n",
     "# 2d cuvboid hull -> 3d cuboid\n",
     "room_height = 3.\n",
-    "layout_box_3d = np.hstack((np.vstack((layout_hull, layout_hull)), np.vstack((np.zeros((4, 1)), np.zeros((4, 1))+room_height))))    \n",
-    "vis_cube_plt(layout_box_3d, ax, 'b', linestyle='--')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 581,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3812ef5419b40938bde7ba53f9bd7ad",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "layout_box_3d = np.hstack((np.vstack((layout_hull_2d, layout_hull_2d)), np.vstack((np.zeros((4, 1)), np.zeros((4, 1))+room_height))))    \n",
+    "vis_cube_plt(layout_box_3d, ax, 'b', linestyle='--')\n",
+    "\n",
+    "\n",
     "# transfer layout to world coordinates\n",
     "transformFile = Path(xml_path) / scene_name / 'transform.dat'\n",
     "# load transformations # writeShapeToXML.py L588\n",
@@ -235,13 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 770,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdc8a13c02624ecabc94fd81b206ebd8",
+       "model_id": "0e78be6e3c474213bf4d9cb3bd01f6f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -256,6 +252,11 @@
    "source": [
     "# === Read cam intrinsics\n",
     "from utils_OR.utils_OR_xml import get_XML_root, parse_XML_for_intrinsics\n",
+    "from utils_OR.utils_OR import in_frame\n",
+    "from PIL import Image, ImageDraw, ImageFont\n",
+    "from utils_OR.utils_OR import draw_projected_bdb3d\n",
+    "\n",
+    "cam_file = Path(xml_path) / scene_name / 'cam.txt'\n",
     "main_xml_file = Path(xml_path) / scene_name / 'main.xml'\n",
     "root = get_XML_root(main_xml_file)\n",
     "\n",
@@ -264,7 +265,6 @@
     "\n",
     "# === Read cam extrinsics\n",
     "\n",
-    "from utils_OR.utils_OR_cam import normalize, project_v, read_cam_params\n",
     "cam_file = Path(xml_path) / scene_name / 'cam.txt'\n",
     "cam_params = read_cam_params(cam_file)\n",
     "\n",
@@ -305,8 +305,8 @@
     "t_c = - R_c @ origin\n",
     "v_proj = project_v(v_skeleton_transform, R_c, t_c, cam_K)\n",
     "\n",
-    "from PIL import Image, ImageDraw, ImageFont\n",
     "img_map = Image.fromarray((im_hdr*255.).astype(np.uint8))\n",
+    "width, height = img_map.size\n",
     "draw = ImageDraw.Draw(img_map)\n",
     "    \n",
     "v_tuples = v_xytuple_from_v2d_e(v_proj, e_skeleton) # [(x1y1, x2y2), ...]\n",
@@ -320,8 +320,7 @@
     "\n",
     "layout_box_3d_transform = transform_v(layout_box_3d, transforms_layout)\n",
     "layout_box_3d_transform_proj, front_flags = project_v(layout_box_3d_transform, R_c, t_c, cam_K, if_only_proj_front_v=False, if_return_front_flags=True)\n",
-    "from utils_OR.utils_OR import draw_projected_bdb3d\n",
-    "draw_projected_bdb3d(draw, layout_box_3d_transform_proj, front_flags=front_flags, color=(0, 0, 0))\n",
+    "draw_projected_bdb3d(draw, layout_box_3d_transform_proj, front_flags=front_flags, color=(255, 0, 0))\n",
     "\n",
     "plt.figure()\n",
     "plt.imshow(np.array(img_map))\n",
@@ -330,7 +329,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a0efa13965e8457899ff06e1a56de1de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "layout_box_3d_transform_proj\n",
+    "\n",
+    "def draw_lines_notalloutside_image(draw, v_list, idx_list, front_flags, color=(255, 255, 255), width=5):\n",
+    "    assert len(v_list) == len(front_flags)\n",
+    "    for i in range(len(idx_list)-1):\n",
+    "        if front_flags[idx_list[i]] and front_flags[idx_list[i+1]]:\n",
+    "            draw.line([v_list[idx_list[i]], v_list[idx_list[i+1]]], width=width, fill=color)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.imshow((im_hdr*255.).astype(np.uint8))\n",
+    "bdb2D_from_3D = layout_box_3d_transform_proj\n",
+    "bdb2D_from_3D = [tuple(item) for item in bdb2D_from_3D]\n",
+    "if front_flags is None:\n",
+    "    front_flags = [True] * len(bdb2D_from_3D)\n",
+    "assert len(front_flags) == len(bdb2D_from_3D)\n",
+    "\n",
+    "for idx_list in [[0, 1, 2, 3, 0], [4, 5, 6, 7, 4], [0, 4], [1, 5], [2, 6], [3, 7]]:\n",
+    "#     draw_lines_notalloutside_image(draw, bdb2D_from_3D, idx_list, front_flags, color=color, width=width)\n",
+    "    v_list = bdb2D_from_3D\n",
+    "    for i in range(len(idx_list)-1):\n",
+    "            if front_flags[idx_list[i]] and front_flags[idx_list[i+1]]:\n",
+    "                plt.plot([v_list[idx_list[i]][0], v_list[idx_list[i+1]][0]], [v_list[idx_list[i]][1], v_list[idx_list[i+1]][1]], color='r')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -359,13 +405,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51dca3a702284ea7b7a89068310eae2f",
+       "model_id": "b4c20252a0ba48919f81caef74f2b1f1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -379,10 +425,10 @@
     {
      "data": {
       "text/plain": [
-       "<utils.utils_rui.Arrow3D at 0x7fcbdbff9e48>"
+       "<utils.utils_rui.Arrow3D at 0x7f386798f898>"
       ]
      },
-     "execution_count": 637,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 777,
+   "execution_count": 63,
    "metadata": {
     "scrolled": false
    },
@@ -427,7 +473,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "248769b9e2f1415482baa6752a2b618b",
+       "model_id": "303220975ac343bcb567fe5b2da57115",
        "version_major": 2,
        "version_minor": 0
       },
@@ -442,7 +488,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:03,  6.29it/s]\n"
+      "20it [00:03,  5.87it/s]\n"
      ]
     }
    ],
@@ -485,11 +531,12 @@
     "\n",
     "\n",
     "\n",
-    "from utils.utils_rui import vis_cube_plt\n",
     "# vis_cube_plt(bverts_transformed, ax, 'r')\n",
     "vertices_list = []\n",
+    "bverts_list = []\n",
     "faces_list = []\n",
     "num_vertices = 0\n",
+    "obj_path_list = []\n",
     "for shape_idx, shape in tqdm(enumerate(shape_list)):\n",
     "    if 'container' in shape['filename']:\n",
     "        continue\n",
@@ -517,7 +564,22 @@
     "    faces_list.append(faces+num_vertices)\n",
     "    num_vertices += vertices.shape[0]\n",
     "    \n",
+    "    bverts_list.append(bverts_transformed)\n",
+    "    obj_path_list.append(obj_path)\n",
+    "    \n",
     "vis_cube_plt(layout_box_3d_transform, ax, 'b', '--')\n",
+    "\n",
+    "from utils.utils_rui import vis_axis_xyz\n",
+    "vis_axis_xyz(ax, xaxis.flatten(), yaxis.flatten(), zaxis.flatten(), origin.flatten(), suffix='_c')\n",
+    "\n",
+    "a = Arrow3D([origin[0][0], lookat[0][0]*2-origin[0][0]], [origin[1][0], lookat[1][0]*2-origin[1][0]], [origin[2][0], lookat[2][0]*2-origin[2][0]], mutation_scale=20,\n",
+    "                lw=1, arrowstyle=\"->\", color=\"k\")\n",
+    "# a = Arrow3D([0., 1.,], [0., 1.,], [0., 1.,], mutation_scale=20,\n",
+    "#                 lw=1, arrowstyle=\"->\", color=\"k\")\n",
+    "ax.add_artist(a)\n",
+    "a_up = Arrow3D([origin[0][0], origin[0][0]+up[0][0]], [origin[1][0], origin[1][0]+up[1][0]], [origin[2][0], origin[2][0]+up[2][0]], mutation_scale=20,\n",
+    "                lw=1, arrowstyle=\"->\", color=\"r\")\n",
+    "ax.add_artist(a_up)\n",
     "\n",
     "\n",
     "# write to obj\n",
@@ -526,6 +588,144 @@
     "from utils_OR.utils_OR_mesh import writeMesh\n",
     "\n",
     "writeMesh('/home/ruizhu/Downloads/test_mesh.obj', vertices_combine, faces_combine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/layoutMesh/scene0001_01/uv_mapped.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/02773838/54cd45b275f551b276bb31db0358e9c6/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/04379243/e1b85df09d33ddea3e43be0b542efff8/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/03001627/3bbcd9e945c6ceb8d3c29b715a9f3afe/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/04379243/e1b85df09d33ddea3e43be0b542efff8/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/03001627/3bbcd9e945c6ceb8d3c29b715a9f3afe/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/03001627/3bbcd9e945c6ceb8d3c29b715a9f3afe/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/03001627/3bbcd9e945c6ceb8d3c29b715a9f3afe/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/04256520/556166f38429cdfe29bdd38dd4a1a461/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/04256520/556166f38429cdfe29bdd38dd4a1a461/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/04256520/556166f38429cdfe29bdd38dd4a1a461/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/04256520/556166f38429cdfe29bdd38dd4a1a461/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/04379243/c26913f8e139a80baa2b654345545ea/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/04379243/c26913f8e139a80baa2b654345545ea/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/ceiling_lamp/14559/aligned_shape.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/ceiling_lamp/14559/aligned_light.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/window/2/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/door/1ae4af52aa5666ff6108081a4900ebaa/alignedNew.obj'),\n",
+       " PosixPath('/newfoundland2/ruizhu/siggraphasia20dataset/uv_mapped/window/2/alignedNew.obj')]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj_path_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b951024974bc4b619c16c44c22b2a7ea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "img_map = Image.fromarray((im_hdr*255.).astype(np.uint8))\n",
+    "width, height = img_map.size\n",
+    "draw = ImageDraw.Draw(img_map)\n",
+    "    \n",
+    "v_tuples = v_xytuple_from_v2d_e(v_proj, e_skeleton) # [(x1y1, x2y2), ...]\n",
+    "v_tuples = [x for x in v_tuples if in_frame(x[0], width, height) or in_frame(x[1], width, height)]\n",
+    "\n",
+    "for v_tuple in v_tuples:\n",
+    "    draw.line([tuple(v_tuple[0]), tuple(v_tuple[1])], width=2)\n",
+    "    \n",
+    "layout_box_3d_transform = transform_v(layout_box_3d, transforms_layout)\n",
+    "layout_box_3d_transform_proj, front_flags = project_v(layout_box_3d_transform, R_c, t_c, cam_K, if_only_proj_front_v=False, if_return_front_flags=True)\n",
+    "draw_projected_bdb3d(draw, layout_box_3d_transform_proj, front_flags=front_flags, color=(255, 0, 0))\n",
+    "\n",
+    "for bverts in bverts_list:\n",
+    "    valid_vertices = 0\n",
+    "    obj_box_3d_transform_proj, front_flags = project_v(bverts, R_c, t_c, cam_K, if_only_proj_front_v=False, if_return_front_flags=True)\n",
+    "    for idx in range(len(front_flags)):\n",
+    "        if front_flags[idx] and in_frame(obj_box_3d_transform_proj[idx], width, height):\n",
+    "            valid_vertices += 1\n",
+    "    if valid_vertices > 0:\n",
+    "        draw_projected_bdb3d(draw, obj_box_3d_transform_proj, front_flags=front_flags, color=(0, 255, 0))\n",
+    "    else:\n",
+    "        draw_projected_bdb3d(draw, obj_box_3d_transform_proj, front_flags=front_flags, color=(255, 255, 0))\n",
+    "    \n",
+    "\n",
+    "plt.figure()\n",
+    "plt.imshow(np.array(img_map))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cb2ed0b1a00a470a8e1010d3df9d6951",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.figure()\n",
+    "plt.imshow((im_hdr*255.).astype(np.uint8))\n",
+    "for bverts, obj_path in zip(bverts_list, obj_path_list):\n",
+    "    valid_vertices = 0\n",
+    "    if_is_obj = 'alignedNew.obj' in str(obj_path)\n",
+    "    obj_box_3d_transform_proj, front_flags = project_v(bverts, R_c, t_c, cam_K, if_only_proj_front_v=False, if_return_front_flags=True)\n",
+    "    for idx in range(len(front_flags)):\n",
+    "        if front_flags[idx] and in_frame(obj_box_3d_transform_proj[idx], width, height):\n",
+    "            valid_vertices += 1\n",
+    "    if valid_vertices > 0 and if_is_obj:\n",
+    "        bbox_color='g'\n",
+    "    else:\n",
+    "        bbox_color='y'\n",
+    "        \n",
+    "    v_list = obj_box_3d_transform_proj\n",
+    "    if if_is_obj:\n",
+    "        for idx_list in [[0, 1, 2, 3, 0], [4, 5, 6, 7, 4], [0, 4], [1, 5], [2, 6], [3, 7]]:\n",
+    "            for i in range(len(idx_list)-1):\n",
+    "                if front_flags[idx_list[i]] and front_flags[idx_list[i+1]]:\n",
+    "                    plt.plot([v_list[idx_list[i]][0], v_list[idx_list[i+1]][0]], [v_list[idx_list[i]][1], v_list[idx_list[i+1]][1]], color=bbox_color)\n",
+    "                \n",
+    "plt.xlim([-width, width*2])\n",
+    "plt.ylim([height*2, -height])\n",
+    "        \n",
+    "plt.show()"
    ]
   }
  ],
